[[release-notes-5.10.3]]
== 5.10.3

*Date of Release:* ❓

*Scope:* Bug fixes and enhancements since 5.10.2

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/78?closed=1+[5.10.3] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.10.3-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* The `junit-platform-suite-engine` now includes configuration provided via
  `@ConfigurationParameter` when selecting tests by `UniqueId`.
* In order to support using `@EnabledInNativeImage` on test classes,
  `UniqueIdTrackingListener` now tracks descendants of skipped test containers.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.10.3-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* `TempDir` suppresses `NoSuchFileException` when deleting files that may have been deleted
  by another thread or process.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


= [[release-notes-5.10.3-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓