@@ -19,6 +19,9 @@ on GitHub.
   `@ConfigurationParameter` when selecting tests by `UniqueId`.
 * In order to support using `@EnabledInNativeImage` on test classes,
   `UniqueIdTrackingListener` now tracks descendants of skipped test containers.
+* Attempting to deserialize a `TestIdentifier` no longer causes a `NullPointerException`
+  when there is no parent identifier. See
+  link:https://github.com/junit-team/junit5/issues/3819[issue 3819].
 
 ==== Deprecations and Breaking Changes
 
